# ssafy_first_team

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 39af0654d1ee_22.py  7c1b0a4d9e21_split_board_korean_english_fields.py  a42d91e7c305_add_comment_translation_fields.py  b9b8d24a45f7_first.py  f466616b2c85_add_localized_board_and_post_columns.py
app/: __init__.py
app/core/: config.py  database.py
app/models/: base.py
data/: localhub.db
docs/: remote-vector-mcp.md
scripts/: build_faiss_index.py  import_busan_boards.py  manage_db.bat  manage_db.sh  migrate_db.py  reset_alembic_version.py  start.sh  start_vector_mcp.ps1  translate_boards.py  translate_comments.ps1  translate_comments.py  translate_local_boards.py
src/: __init__.py
src/agent/: __init__.py  prompts.py  router.py  schemas.py  service.py
src/api/: localization.py
src/core/: config.py  database.py  ids.py  logging.py  migrations.py
src/mcp_servers/: __init__.py  database_search.py  faiss_store.py  local_search.py  remote_vector_server.py  sqlite_search.py  tavily_search.py  vector_search.py  web_search.py
src/models/: __init__.py  base.py  base_entity.py  board.py  comment.py  media.py  post.py  post_like.py  (+2 more)
tests/: test_agent.py  test_board.py  test_chat_memory.py  test_comment.py  test_data_import.py  test_database.py  test_faiss_store.py  test_main.py  test_memory_loading.py  test_migrations.py  test_post.py  test_post_translation.py  test_remaining_routes.py  test_remote_vector_mcp.py  test_search.py  test_sqlite_search.py  test_translate_local_boards.py  test_web_search.py
(+44 files in other folders)
