[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend and MCP-based RAG agent for LocalHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langsmith>=0.10.3",
    "mcp[cli]>=1.28.1",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
